--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
@@ -7,8 +6,11 @@ on:
     paths-ignore:
       - '**.md'
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  pull_request:
+      branches: ['main']
+      paths-ignore:
+        - '**.md'
+
 
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
@@ -16,16 +18,9 @@ permissions:
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
+    name: Build 🏗️
     runs-on: ubuntu-latest
 
     steps:
@@ -38,25 +33,39 @@ jobs:
           version: 8
 
       - name: Set-up Node 🔧
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'pnpm'
 
-      - name: Install dependencies 🧪
+      - name: Install dependencies 📥
         run: pnpm install
+
+      - name: Run Tests 🧪
+        run: pnpm test
 
       - name: Build 🏗️
         run: pnpm build
 
-      - name: Setup Pages 📄
-        uses: actions/configure-pages@v3
-
       - name: Upload artifact 📁
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
+          path: ./dist
+
+  deploy:
+    name: Deploy 🚀
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Setup Pages 📄
+        uses: actions/configure-pages@v4
 
       - name: Deploy to GitHub Pages 🚀
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
