--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,9 @@ on:
       - '**.md'
 
   pull_request:
-      branches: ['main']
-      paths-ignore:
-        - '**.md'
-
+    branches: ['main']
+    paths-ignore:
+      - '**.md'
 
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
@@ -40,6 +39,9 @@ jobs:
 
       - name: Install dependencies 📥
         run: pnpm install
+
+      - name: Check formatting 🧼
+        run: pnpm format:check
 
       - name: Run Tests 🧪
         run: pnpm test
