--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@monaco-editor/react": "^4.6.0",
     "fflate": "^0.8.2",
     "js-base64": "^3.7.7",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "styled-components": "^6.1.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
