--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "downshift": "^8.4.0",
     "fflate": "^0.8.2",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.344.0",
