--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,11 @@
-name: Deploy static content to Pages
+name: Build & Deploy
 
 on:
   push:
     branches: ['main']
-    paths-ignore:
-      - '**.md'
 
   pull_request:
     branches: ['main']
-    paths-ignore:
-      - '**.md'
 
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
